# RAG_practice

./: .gitignore  README.md  data.txt  main.py  pyproject.toml  rag_engine.py
